--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>
-    Fruit Stock Management
+    Fruit Stock Management Demo
   </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css"/>
   <style>
