--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -122,7 +122,7 @@
 
   <h1>Vert.x Crud Application 1</h1>
 
-  <p>This application demonstrates how a Vert.x application implement a CRUD endpoint to manage <em>fruits</em>.
+  <p>This application demonstrates how a Vert.x application implement a CRUD endpoint to manage <em>fruits service</em>.
     This management interface invokes the CRUD service endpoint, that interact with a PosgreSQL database using JDBC
     .</p>
 
